# pairinteraction

./: .appveyor.yml  .build_requirements.txt  .clang-format  .clang-tidy  .cmake-format.json  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .ruff.toml  .sonarcloud.properties  .travis.yml  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  LICENSE-3RD-PARTY.txt  LICENSE-GPL.txt  LICENSE-LGPL.txt  LICENSE-MKL.txt  LICENSE.MIT  LICENSE.OMPI  LICENSE.txt  README.md  SystemTwo.cpp  SystemTwo_ideas.cpp  index.html  postinst  pyproject.toml  requirements.txt  setup.cfg.in  setup.py.in  sonar-project.properties  test_numerical_precision_fix.cpp  vcpkg.json  versions.json
calc/: Basis.cpp  Basis.h  BasisBase.h  Basisnames.cpp  Basisnames.h  CMakeLists.txt  Communication.h  ConfParser.cpp  ConfParser.h  HamiltonianOne.cpp  HamiltonianOne.h  HamiltonianTwo.cpp  HamiltonianTwo.h  Hamiltonianmatrix.cpp  Hamiltonianmatrix.h  Interface.h  Interface.i.cmakein  Iter.h  MatrixElements.cpp  MatrixElements.h  MpiEnvironment.cpp  MpiEnvironment.h  MpiLoadbalancing.h  MpiLoadbalancingComplex.cpp  MpiLoadbalancingComplex.h  MpiLoadbalancingSimple.h  MpiVariables.cpp  MpiVariables.h  Numerov.cpp  NumpyUtils.h  QuantumDefect.cpp  QuantumDefect.h  QuantumDefect.hpp  SQLite.cpp  SQLite.h  Serializable.h  State.cpp  State.h  SystemBase.h  SystemOne.cpp  (+25 more)
calc/databases/: CMakeLists.txt  quantum_defects.db  quantum_defects.sql
calc/unit_test/: CMakeLists.txt  communication_test.cpp  conf_parser_test.cpp  integration_test.cpp  integration_test_referencedata.txt  quantum_defect_test.cpp  sqlite_test.cpp  wavefunction_test.cpp
doc/sphinx/: CMakeLists.txt  Makefile  about.rst  comparison_to_saffman_fig13.ipynb  conf.py  conf.py.in  config.rst  contributing.rst  databases.rst  development.rst  index.rst  installation.rst  modules.rst  mqdt.rst  overview.rst  pairinteraction.rst  repo.rst  tutorials.rst  ways.rst
gui/: CMakeLists.txt  CMakeLists.txt_B  adapt.cmake  example.pconf  example.sconf  gui.py  main.py  pairinteraction.py  pairinteraction.spec  plotter.ui  start.py  startgui  startgui.cmakein  system_settings.py  test.py  version.py  version.py.cmakein
gui/cmake/: pyinstaller.cmake
gui/conf/: example.pconf  example.sconf
gui/pairinteraction/: app.py  guiadditions.py  loader.py  pyqtgraphadditions.py  unitmanagement.py  utils.py  worker.py
gui2/: CMakeLists.txt  plotter.py  plotter.ui  start.py
julia/src/: CMakeLists.txt  PairInteraction.jl
libpairinteraction/: Basisnames.cpp  Basisnames.h  CMakeLists.txt  Cache.h  Communication.h  ConfParser.cpp  ConfParser.h  GreenTensor.cpp  GreenTensor.h  Hamiltonian.h  HamiltonianOne.cpp  HamiltonianOne.h  HamiltonianTwo.cpp  HamiltonianTwo.h  Hamiltonianmatrix.cpp  Hamiltonianmatrix.h  Interface.cpp  Interface.h  Interface.i.cmakein  Iter.h  MatrixElementCache.cpp  MatrixElementCache.h  MatrixElements.cpp  MatrixElements.h  NumpyUtils.h  PerturbativeDipolarInteraction.cpp  PerturbativeDipolarInteraction.h  PerturbativeInteraction.cpp  PerturbativeInteraction.h  QuantumDefect.cpp  QuantumDefect.h  SQLite.h  Serializable.h  State  State.cpp  State.h  System  SystemBase.cpp  SystemBase.h  SystemOne.cpp  (+15 more)
libpairinteraction/databases/: CMakeLists.txt  quantum_defects.sql
libpairinteraction/unit_test/: CMakeLists.txt  cache_test.cpp  communication_test.cpp  conf_parser_test.cpp  integration_test.cpp  integration_test_referencedata.txt  quantum_defect_test.cpp  sqlite_test.cpp  utils_test.cpp  wavefunction_test.cpp
pairinteraction/: .clang-format  .clang-tidy  Basisnames.cpp  Basisnames.h  Basisnames.hpp  CMakeLists.txt  Cache.h  ConfParser.cpp  ConfParser.h  ConfParser.hpp  Constants.hpp  EmbeddedDatabase.h  EmbeddedDatabase.h.in  EmbeddedDatabase.hpp.in  GreenTensor.cpp  GreenTensor.h  GreenTensor.hpp  Hamiltonian.h  Hamiltonian.hpp  HamiltonianOne.cpp  HamiltonianOne.h  HamiltonianOne.hpp  HamiltonianTwo.cpp  HamiltonianTwo.h  HamiltonianTwo.hpp  Hamiltonianmatrix.cpp  Hamiltonianmatrix.h  Hamiltonianmatrix.hpp  Interface.cpp  Interface.hpp  Interface.i  Interface.i.cmakein  Iter.hpp  MatrixElementCache.cpp  MatrixElementCache.h  MatrixElementCache.hpp  MatrixElements.cpp  MatrixElements.h  MatrixElements.hpp  NumpyUtils.h  (+49 more)
pairinteraction_backend/: CMakeLists.txt  binding.cpp  main.cpp  setup.cpp  test.cpp  test.hpp
pairinteraction_backend_old/: Basisnames.cpp  Basisnames.hpp  CMakeLists.txt  Cache.hpp  EigenCompat.hpp  GreenTensor.cpp  HamiltonianTwo.cpp  HamiltonianTwo.hpp  MatrixElementCache.cpp  MatrixElementCache.hpp  MatrixElements.cpp  NumpyUtils.hpp  SQLite.hpp  State.cpp  StateOld.cpp  Symmetry.hpp  System  SystemBase.cpp  SystemBase.hpp  SystemOne.hpp  SystemTwo.cpp  SystemTwo.hpp  Wavefunction.cpp  Wavefunction.hpp  WignerD.cpp  WignerD.hpp  binding.cpp  maths.hpp  serialization_eigen.hpp  utils.hpp  version.hpp.in
pairinteraction_gui/: CMakeLists.txt  app.py  guiadditions.py  pairinteraction.spec  pipy_thread.py  plotter.ui  pyqtgraphadditions.py  start_pairinteraction_gui  start_pairinteraction_gui.py  startgui.cmakein  version.py  version.py.cmakein  worker.py
testsuite/: CMakeLists.txt  atom_ion_interaction.py  cache.py  compute.py  defects.sql  diamagnetism.py  explicitbasis.py  feast.py  fieldcombination.py  greentensor.py  gui.py  integration.py  integration_test_referencedata.pickle  parallelization.py  perturbation.py  pythoninterface_multiprocessing.py  pythoninterface_symmetries.py  quantum_defect.py  rotation.py  state.py  symmetries.py  wavefunction.py
trunk/: Basisnames.cpp  Basisnames.h  CMakeLists.txt  ConfParser.cpp  ConfParser.hpp  DipoleMatrix.cpp  DipoleMatrix.hpp  JsonParser.cpp  JsonParser.hpp  MatrixElements.cpp  MatrixElements.h  MpiEnvironment.cpp  MpiEnvironment.h  MpiLoadbalancing.h  MpiLoadbalancingComplex.h  MpiLoadbalancingSimple.h  MpiVariables.cpp  MpiVariables.h  Numerov.cpp  Numerov.hpp  QuantumDefect.cpp  QuantumDefect.hpp  SQLite.cpp  SQLite.hpp  Serializable.h  State.h  config.h.in  dtypes.h  main.cpp  makefile  radial_elements.db  test.py
(+6812 files in other folders)
